
0.17_3  Mon Feb 13 22:17 GMT 2010
    Bug Fixes
    Adding tests around the HTML generated by the login_box function and
    verifying that it is taint free.
    Upped requiredment on CGI to 3.11 as that seems to cause unusual behaviour in returning
    self referring urls.
    Further upped requirement on CGI to 3.16 as 3.15 has a buggy interpretation of redirection headers.

0.17  Thu Jan 21 19:16 GMT 2010
    Bug Fixes
    rt53533 - During initialization deferred checking the users credentials to the last possible moment.
    This ensures that sessions are not created unless actually required. 
    Also attempted to document which functions add session/cookie state.

    Build Fixes
    rt35030 - Upped the requirement on Apache::Htpasswd to 1.8 as this simplifies our dependency management.

0.16  Mon Jan 18 22:18 GMT 2010 
    Release dedicated to improving CPAN readiness - see RT:50670.
    Fixed spelling mistakes and added a test script that uses Test::Spelling.
    Fixed dependency on Test::Exception and added a test script that uses Test::Prereq::Build.
    Added test scripts to validate the MANIFEST file and Changes file.
    Removed files that are generated during './Build dist' from repository.
    
0.15  Tue Jan 12 15:42 GMT 2010
    Redist to fix tar format issues RT:45155 & 23705

0.14  Sun Oct 18 02:48:10 EST 2009
    Bug Fixes
    - Make sure the 'action' attribute of the login_box includes the
      path_info in the URL (resolves RT:38049 patch by Alex Becker)
    
    New Features
    - Add options for LIMIT and ORDER_BY to DBI driver (requested by tbone)
    - Add FORM_SUBMIT_METHOD option to the login box which allows you to
      change the form method to GET instead of the default POST.
      (resolves RT:34198 requested by jaldhar)
    - Add hooks for devpopup (resolves RT:35989 patch by Alexandr Ciornii)

0.13  Mon Mar 30 23:58:25 EST 2009
    Build fixes
    - There are no code changes to this release, just fixes in the build and